--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "express-session": "^1.13.0",
+    "firebase": "^2.4.2",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "jsonwebtoken": "^6.2.0"
+    "jsonwebtoken": "^6.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "bower": "^1.3.3",
