--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "angular-hammer": "^2.1.10",
+    "babel-register": "^6.9.0",
+    "bootbox": "^4.4.0",
+    "chai": "^2.3.0",
     "express-session": "^1.13.0",
+    "extend": "^3.0.0",
     "firebase": "^2.4.2",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
@@ -17,13 +21,13 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "hammerjs": "^2.0.8",
+    "jasmine": "^2.4.1",
     "jsonwebtoken": "^6.2.0",
-    "path": "^0.12.7"
+    "mocha": "^2.4.5",
+    "path": "^0.12.7",
+    "supertest": "^0.15.0"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
     "angular": "^1.5.0-beta.0",
     "angular-animate": "^1.4.7",
     "angular-aria": "^1.5.5",
@@ -38,6 +42,7 @@
     "bluebird": "^3.3.3",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.4",
+    "bower": "^1.3.3",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
     "connect-mongo": "^0.7.0",
@@ -60,6 +65,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^2.2.14",
     "jquery": "^2.2.3",
     "karma": "^0.13.14",
     "karma-chai": "^0.1.0",
@@ -69,6 +75,7 @@
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^3.9.3",
+    "mocha": "^2.4.5",
     "mocha-mongoose": "^1.0.3",
     "mongodb": "^1.4.33",
     "mongoose": "^4.0.7",
@@ -81,6 +88,7 @@
     "passport-twitter": "^1.0.2",
     "run-sequence": "^1.0.2",
     "serve-favicon": "^2.2.0",
+    "shelljs": "^0.3.0",
     "sinon": "^1.13.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
