user avatar camera functionality working and persisting.

--- a/platforms/ios/HelloCordova/HelloCordova-Info.plist
+++ b/platforms/ios/HelloCordova/HelloCordova-Info.plist
@@ -178,5 +178,9 @@
     </dict>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>mailto</string>
+    </array>
   </dict>
 </plist>
