--- a/package.json
+++ b/package.json
@@ -95,13 +95,14 @@
     "stripe": "^4.5.0",
     "supertest": "^0.15.0"
   },
-  "cordovaPlugins": [
+"cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
+    "cordova-plugin-contacts",
     "ionic-plugin-keyboard"
-  ],
+],
   "cordovaPlatforms": []
 }
