--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An Ionic project",
   "main": "server/start.js",
   "scripts": {
-    "start": "nodemon --watch server -e js,html server/start.js",
+    "start-dev": "nodemon --watch server -e js,html server/start.js",
+    "start": "node server/start.js",
     "postinstall": "node seed.js"
   },
   "dependencies": {
