--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start-dev": "nodemon --watch server -e js,html server/start.js",
     "start": "node server/start.js",
-    "postinstall": "node seed.js"
+    "postinstall": ""
   },
   "dependencies": {
     "angular-hammer": "^2.1.10",
@@ -45,8 +45,10 @@
     "sinon": "^1.13.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
+    "cookie-parser": "^1.3.4",
     "stripe": "^4.5.0",
 
+    "connect-mongo": "^0.7.0",
     "express-session": "^1.10.3",
     "path": "^0.12.7",
     "body-parser": "^1.12.0",
@@ -69,8 +71,6 @@
     "bower": "^1.3.3",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
-    "connect-mongo": "^0.7.0",
-    "cookie-parser": "^1.3.4",
     "eslint": "^2.8.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.2",
